# generated/northbound/restapi/operations/northbound/get_jobs_id_status_subscribe_responses.go
@@ -1,0 +1,172 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// SPDX-FileCopyrightText: 2023 Siemens AG
+//
+// SPDX-License-Identifier: Apache-2.0
+//
+
+package northbound
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+	"github.com/siemens/wfx/generated/model"
+)
+
+// GetJobsIDStatusSubscribeOKCode is the HTTP code returned for type GetJobsIDStatusSubscribeOK
+const GetJobsIDStatusSubscribeOKCode int = 200
+
+/*
+GetJobsIDStatusSubscribeOK A stream of server-sent events
+
+swagger:response getJobsIdStatusSubscribeOK
+*/
+type GetJobsIDStatusSubscribeOK struct {
+}
+
+// NewGetJobsIDStatusSubscribeOK creates GetJobsIDStatusSubscribeOK with default headers values
+func NewGetJobsIDStatusSubscribeOK() *GetJobsIDStatusSubscribeOK {
+
+	return &GetJobsIDStatusSubscribeOK{}
+}
+
+// WriteResponse to the client
+func (o *GetJobsIDStatusSubscribeOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(200)
+}
+
+// GetJobsIDStatusSubscribeBadRequestCode is the HTTP code returned for type GetJobsIDStatusSubscribeBadRequest
+const GetJobsIDStatusSubscribeBadRequestCode int = 400
+
+/*
+GetJobsIDStatusSubscribeBadRequest Bad Request
+
+swagger:response getJobsIdStatusSubscribeBadRequest
+*/
+type GetJobsIDStatusSubscribeBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *model.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewGetJobsIDStatusSubscribeBadRequest creates GetJobsIDStatusSubscribeBadRequest with default headers values
+func NewGetJobsIDStatusSubscribeBadRequest() *GetJobsIDStatusSubscribeBadRequest {
+
+	return &GetJobsIDStatusSubscribeBadRequest{}
+}
+
+// WithPayload adds the payload to the get jobs Id status subscribe bad request response
+func (o *GetJobsIDStatusSubscribeBadRequest) WithPayload(payload *model.ErrorResponse) *GetJobsIDStatusSubscribeBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get jobs Id status subscribe bad request response
+func (o *GetJobsIDStatusSubscribeBadRequest) SetPayload(payload *model.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetJobsIDStatusSubscribeBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetJobsIDStatusSubscribeNotFoundCode is the HTTP code returned for type GetJobsIDStatusSubscribeNotFound
+const GetJobsIDStatusSubscribeNotFoundCode int = 404
+
+/*
+GetJobsIDStatusSubscribeNotFound Not Found
+
+swagger:response getJobsIdStatusSubscribeNotFound
+*/
+type GetJobsIDStatusSubscribeNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *model.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewGetJobsIDStatusSubscribeNotFound creates GetJobsIDStatusSubscribeNotFound with default headers values
+func NewGetJobsIDStatusSubscribeNotFound() *GetJobsIDStatusSubscribeNotFound {
+
+	return &GetJobsIDStatusSubscribeNotFound{}
+}
+
+// WithPayload adds the payload to the get jobs Id status subscribe not found response
+func (o *GetJobsIDStatusSubscribeNotFound) WithPayload(payload *model.ErrorResponse) *GetJobsIDStatusSubscribeNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get jobs Id status subscribe not found response
+func (o *GetJobsIDStatusSubscribeNotFound) SetPayload(payload *model.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetJobsIDStatusSubscribeNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*
+GetJobsIDStatusSubscribeDefault Other error with any status code and response body format.
+
+swagger:response getJobsIdStatusSubscribeDefault
+*/
+type GetJobsIDStatusSubscribeDefault struct {
+	_statusCode int
+}
+
+// NewGetJobsIDStatusSubscribeDefault creates GetJobsIDStatusSubscribeDefault with default headers values
+func NewGetJobsIDStatusSubscribeDefault(code int) *GetJobsIDStatusSubscribeDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetJobsIDStatusSubscribeDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get jobs ID status subscribe default response
+func (o *GetJobsIDStatusSubscribeDefault) WithStatusCode(code int) *GetJobsIDStatusSubscribeDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get jobs ID status subscribe default response
+func (o *GetJobsIDStatusSubscribeDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WriteResponse to the client
+func (o *GetJobsIDStatusSubscribeDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(o._statusCode)
+}
